MiniJavaAST/src/pacote/hpbl_rfl3Parser.java
// Generated from /Users/Pintor/Documents/CIn/7/Compiladores/MiniJava-AST/MiniJavaAST/src/pacote/hpbl_rfl3.g4 by ANTLR 4.7
package pacote;

import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class hpbl_rfl3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, INTEGER_LITERAL=36, IDENTIFIER=37, 
		WS=38, BLOCKCOMMENT=39, LINECOMMENT=40;
	public static final int
		RULE_goal = 0, RULE_mainClass = 1, RULE_classDeclaration = 2, RULE_varDeclaration = 3, 
		RULE_methodDeclaration = 4, RULE_type = 5, RULE_statement = 6, RULE_expression = 7, 
		RULE_identifier = 8;
	public static final String[] ruleNames = {
		"goal", "mainClass", "classDeclaration", "varDeclaration", "methodDeclaration", 
		"type", "statement", "expression", "identifier"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'class'", "'{'", "'public'", "'static'", "'void'", "'main'", "'('", 
		"'String'", "'['", "']'", "')'", "'}'", "'extends'", "';'", "','", "'return'", 
		"'int'", "'boolean'", "'if'", "'else'", "'while'", "'System.out.println'", 
		"'='", "'&&'", "'<'", "'+'", "'-'", "'*'", "'.'", "'length'", "'true'", 
		"'false'", "'this'", "'new'", "'!'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"INTEGER_LITERAL", "IDENTIFIER", "WS", "BLOCKCOMMENT", "LINECOMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "hpbl_rfl3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public hpbl_rfl3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GoalContext extends ParserRuleContext {
		public Program programa;
		public MainClassContext mc1;
		public ClassDeclarationContext cd1;
		public TerminalNode EOF() { return getToken(hpbl_rfl3Parser.EOF, 0); }
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).exitGoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof hpbl_rfl3Visitor ) return ((hpbl_rfl3Visitor<? extends T>)visitor).visitGoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_goal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			ClassDeclList cdl1 = new ClassDeclList();
			setState(19);
			((GoalContext)_localctx).mc1 = mainClass();
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(20);
				((GoalContext)_localctx).cd1 = classDeclaration();

				                            if (((GoalContext)_localctx).cd1 != null) {
				                                cdl1.addElement(((GoalContext)_localctx).cd1.declClasse);
				                            }
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(28);
			match(EOF);
			((GoalContext)_localctx).programa =  new Program(((GoalContext)_localctx).mc1.classeMain, cdl1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public MainClass classeMain;
		public IdentifierContext id1;
		public IdentifierContext id2;
		public StatementContext s1;
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).enterMainClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).exitMainClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof hpbl_rfl3Visitor ) return ((hpbl_rfl3Visitor<? extends T>)visitor).visitMainClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			match(T__0);
			setState(32);
			((MainClassContext)_localctx).id1 = identifier();
			setState(33);
			match(T__1);
			setState(34);
			match(T__2);
			setState(35);
			match(T__3);
			setState(36);
			match(T__4);
			setState(37);
			match(T__5);
			setState(38);
			match(T__6);
			setState(39);
			match(T__7);
			setState(40);
			match(T__8);
			setState(41);
			match(T__9);
			setState(42);
			((MainClassContext)_localctx).id2 = identifier();
			setState(43);
			match(T__10);
			setState(44);
			match(T__1);
			setState(45);
			((MainClassContext)_localctx).s1 = statement();
			setState(46);
			match(T__11);
			setState(47);
			match(T__11);
			Identifier idtf1 = new Identifier(((MainClassContext)_localctx).id1.getText());
			                Identifier idtf2 = new Identifier(((MainClassContext)_localctx).id2.getText());

			                ((MainClassContext)_localctx).classeMain =  new MainClass(idtf1, idtf2, ((MainClassContext)_localctx).s1.declaracao);
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public ClassDecl declClasse;
		public IdentifierContext id1;
		public IdentifierContext id2;
		public VarDeclarationContext vd1;
		public MethodDeclarationContext md1;
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof hpbl_rfl3Visitor ) return ((hpbl_rfl3Visitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			VarDeclList vl1 = new VarDeclList();
			                MethodDeclList ml1 = new MethodDeclList();
			setState(51);
			match(T__0);
			setState(52);
			((ClassDeclarationContext)_localctx).id1 = identifier();
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(53);
				match(T__12);
				setState(54);
				((ClassDeclarationContext)_localctx).id2 = identifier();
				}
			}

			setState(57);
			match(T__1);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__16) | (1L << T__17) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(58);
				((ClassDeclarationContext)_localctx).vd1 = varDeclaration();

				                                                                                           if (((ClassDeclarationContext)_localctx).vd1 != null) {
				                                                                                            vl1.addElement(((ClassDeclarationContext)_localctx).vd1.declVariavel);
				                                                                                           }
				                                                                                           
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(66);
				((ClassDeclarationContext)_localctx).md1 = methodDeclaration();

				                                                                                                           if (((ClassDeclarationContext)_localctx).md1 != null) {
				                                                                                                               ml1.addElement(((ClassDeclarationContext)_localctx).md1.declMetodo);
				                                                                                                           }
				                                                                                           
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(T__11);
			Identifier idtf1 = new Identifier(((ClassDeclarationContext)_localctx).id1.getText());


			                if (((ClassDeclarationContext)_localctx).id2 != null) {
			                    Identifier idtf2 = new Identifier(((ClassDeclarationContext)_localctx).id2.getText());
			                    ((ClassDeclarationContext)_localctx).declClasse =  new ClassDeclExtends(idtf1, idtf2, vl1, ml1);

			                } else {
			                    ((ClassDeclarationContext)_localctx).declClasse =  new ClassDeclSimple(idtf1, vl1, ml1);
			                }

			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public VarDecl declVariavel;
		public TypeContext tp;
		public IdentifierContext id;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).exitVarDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof hpbl_rfl3Visitor ) return ((hpbl_rfl3Visitor<? extends T>)visitor).visitVarDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			((VarDeclarationContext)_localctx).tp = type();
			setState(78);
			((VarDeclarationContext)_localctx).id = identifier();
			setState(79);
			match(T__13);
			Identifier idtf = new Identifier(((VarDeclarationContext)_localctx).id.getText());
			                ((VarDeclarationContext)_localctx).declVariavel =  new VarDecl(((VarDeclarationContext)_localctx).tp.tipo, idtf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclarationContext extends ParserRuleContext {
		public MethodDecl declMetodo;
		public TypeContext tp1;
		public IdentifierContext id1;
		public TypeContext tp2;
		public IdentifierContext id2;
		public TypeContext tp3;
		public IdentifierContext id3;
		public VarDeclarationContext vd1;
		public StatementContext st1;
		public ExpressionContext e1;
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).enterMethodDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).exitMethodDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof hpbl_rfl3Visitor ) return ((hpbl_rfl3Visitor<? extends T>)visitor).visitMethodDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodDeclaration);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			FormalList fl1 = new FormalList();
			                VarDeclList vl1 = new VarDeclList();
			                StatementList sl1 = new StatementList();
			setState(83);
			match(T__2);
			setState(84);
			((MethodDeclarationContext)_localctx).tp1 = type();
			setState(85);
			((MethodDeclarationContext)_localctx).id1 = identifier();
			setState(86);
			match(T__6);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__16) | (1L << T__17) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(87);
				((MethodDeclarationContext)_localctx).tp2 = type();
				setState(88);
				((MethodDeclarationContext)_localctx).id2 = identifier();

				                                                                            if (((MethodDeclarationContext)_localctx).id2 != null) {
				                                                                                Identifier idtf2 = new Identifier(((MethodDeclarationContext)_localctx).id2.getText());
				                                                                                Formal f1 = new Formal(((MethodDeclarationContext)_localctx).tp2.tipo, idtf2);
				                                                                                fl1.addElement(f1);
				                                                                                }
				                                                                            
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__14) {
					{
					{
					setState(90);
					match(T__14);
					setState(91);
					((MethodDeclarationContext)_localctx).tp3 = type();
					setState(92);
					((MethodDeclarationContext)_localctx).id3 = identifier();

					                                                                                if (((MethodDeclarationContext)_localctx).id2 != null) {
					                                                                                    Identifier idtf2 = new Identifier(((MethodDeclarationContext)_localctx).id2.getText());
					                                                                                    Formal f1 = new Formal(((MethodDeclarationContext)_localctx).tp2.tipo, idtf2);
					                                                                                    fl1.addElement(f1);
					                                                                                }
					                                                                            
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(102);
			match(T__10);
			setState(103);
			match(T__1);
			setState(109);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(104);
					((MethodDeclarationContext)_localctx).vd1 = varDeclaration();

					                                                                                                vl1.addElement(((MethodDeclarationContext)_localctx).vd1.declVariavel);
					                                                                                            
					}
					} 
				}
				setState(111);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(112);
				((MethodDeclarationContext)_localctx).st1 = statement();

				                                                                                                sl1.addElement(((MethodDeclarationContext)_localctx).st1.declaracao);
				                                                                                             
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(T__15);
			setState(121);
			((MethodDeclarationContext)_localctx).e1 = expression(0);
			setState(122);
			match(T__13);
			setState(123);
			match(T__11);
			Identifier idtf1 = new Identifier(((MethodDeclarationContext)_localctx).id1.getText());

			                ((MethodDeclarationContext)_localctx).declMetodo =  new MethodDecl(((MethodDeclarationContext)_localctx).tp1.tipo, idtf1, fl1, vl1, sl1, ((MethodDeclarationContext)_localctx).e1.expressao);
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type tipo;
		public IdentifierContext id;
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof hpbl_rfl3Visitor ) return ((hpbl_rfl3Visitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(T__16);
				setState(127);
				match(T__8);
				setState(128);
				match(T__9);
				((TypeContext)_localctx).tipo =  new IntArrayType();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(T__17);
				((TypeContext)_localctx).tipo =  new BooleanType();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				match(T__16);
				((TypeContext)_localctx).tipo =  new IntegerType();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				((TypeContext)_localctx).id = identifier();
				((TypeContext)_localctx).tipo =  new IdentifierType(((TypeContext)_localctx).id.getText());
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Statement declaracao;
		public StatementContext stmt;
		public ExpressionContext exp;
		public StatementContext s1;
		public StatementContext s2;
		public StatementContext blck;
		public IdentifierContext id;
		public ExpressionContext e1;
		public ExpressionContext e2;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof hpbl_rfl3Listener ) ((hpbl_rfl3Listener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof hpbl_rfl3Visitor ) return ((hpbl_rfl3Visitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}
